--- a/charts/tenant/templates/tenant-system-composition.yaml
+++ b/charts/tenant/templates/tenant-system-composition.yaml
@@ -73,7 +73,7 @@ spec:
               - fromFieldPath: "spec.namespace"
             strategy: string
             string:
-              fmt: "tenant-provider-config-wadtfy-%s-%s"
+              fmt: "wadtfy-%s-%s"
           toFieldPath: "spec.forProvider.manifest.metadata.name"
           policy:
             fromFieldPath: Required
