--- a/charts/tenantfilesystem/values.yaml
+++ b/charts/tenantfilesystem/values.yaml
@@ -1,3 +1,3 @@
-providerConfig:
+provider:
   # provider.kubernetes -- The name of the Kubernetes Crossplane Provider used to provision this component.
   kubernetes:
