--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,3 +30,4 @@ jobs:
         uses: helm/chart-releaser-action@v1.5.0
         env:
           CR_TOKEN: '${{ secrets.CR_TOKEN }}'
+          CR_RELEASE_NOTES_FILE: CHANGELOG.md
