chore: incooperate schema versions in repo names
Signed-off-by: Cliff Dornig <cliff.dornig@iteratec.com>

--- a/.github/workflows/ci-v1beta1.yaml
+++ b/.github/workflows/ci-v1beta1.yaml
@@ -3,7 +3,7 @@ name: Lint and Test Charts
 on:
   pull_request:
     paths:
-      - 'charts/**'
+      - 'charts/v1beta1/**'
 
 jobs:
   lint-chart:
@@ -62,4 +62,4 @@ jobs:
       - name: Run helm-kubeval
         uses: desaintmartin/helm-kubeval-action@master
         with:
-          path: charts/.
+          path: charts/v1beta1/.
